--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+altgraph==0.17.3
 black==22.12.0
 click==8.1.3
+macholib==1.16.2
 mypy-extensions==0.4.3
 pathspec==0.10.3
 platformdirs==2.6.2
+pyinstaller==5.7.0
+pyinstaller-hooks-contrib==2022.15
 tomli==2.0.1
 typer==0.7.0
