--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 altgraph==0.17.3
 black==22.12.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
 click==8.1.3
+idna==3.4
 macholib==1.16.2
 mypy-extensions==0.4.3
 pathspec==0.10.3
 platformdirs==2.6.2
 pyinstaller==5.7.0
 pyinstaller-hooks-contrib==2022.15
+requests==2.28.2
 tomli==2.0.1
 typer==0.7.0
+urllib3==1.26.14
